changed cluster test